# waffle-finance-core

./: .editorconfig  .eslintrc.json  .gitignore  README.md  env.example  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  contracts.yml  release.yml
contracts/: package.json
contracts/contracts/: HTLCEscrow.sol  ResolverRegistry.sol
contracts/contracts/interfaces/: IHTLCEscrow.sol  IResolverRegistry.sol
contracts/scripts/: deploy.ts
coordinator/: README.md  package.json  stelleth.db-shm  stelleth.db-wal  tsconfig.json
coordinator/migrations/: 001_initial.sql  002_solana_support.sql
coordinator/ops/: README.md  coordinator-alerts.yml  docker-compose.yml  prometheus.yml
coordinator/src/: config.ts  index.ts  logger.ts
coordinator/src/listeners/: ethereum-listener.ts  index.ts  solana-listener.ts
coordinator/src/persistence/: db.ts  index.ts  orders-repo.ts  schema.sql
coordinator/src/server/: app.ts
coordinator/src/services/: index.ts  order-service.ts
coordinator/test/: order-service.test.ts  routes.test.ts
e2e/: cross-chain.test.ts  package.json  sim.ts  vitest.config.ts
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BridgeForm.tsx  TransactionHistory.tsx  (+1 more)
relayer/: .eslintrc.cjs  package.json  tsconfig.json
relayer/src/: index.ts
resolver/: package.json
resolver/src/: index.ts
soroban/: Cargo.toml  README.md
soroban/contracts/htlc/: Cargo.toml
soroban/contracts/htlc/src/: lib.rs  test.rs
soroban/scripts/: deploy.sh
(+18 files in other folders)
