[package]
name = "wafflefinance-htlc"
description = "Hash time-lock contract for the WaffleFinance cross-chain bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
wafflefinance-resolver-registry = { path = "../resolver-registry" }
